avoid line break in links

--- a/themes/modern-lancer/src/modern-html.css
+++ b/themes/modern-lancer/src/modern-html.css
@@ -128,6 +128,7 @@ a, a:visited {
   color: #428BCA;
   text-decoration: none;
   font-weight: bold;
+  white-space: nowrap;
 }
 
 a:hover {
